# vote.stravers.net

./: Cargo.toml  makefile
file/: script.js  style.css
migrations/20160331190842_create_posts_table/: down.sql  up.sql
migrations/20160331210111_voting_table/: down.sql  up.sql
src/: dbcon.rs  live.rs  main.rs  models.rs  response.rs  schema.rs  setup_chain.rs  style.css
src/controllers/: index.rs  mod.rs
src/controllers/models/: mod.rs
src/controllers/views/: mod.rs
src/index/: createpoll.rs  fileloader.rs  frontpage.rs  mod.rs  poll.rs  stats.rs  vote.rs
src/middleware/: mod.rs
src/routing/: mod.rs
