[package]
name = "ironweb"
version = "0.1.0"
authors = ["Bourgond Aries <macocio@gmail.com>"]

[dependencies]
chrono = "0.2.21"
clippy = "0.0.58"
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
iron = "0.3.0"
maud = "0.8.0"
maud_macros = "0.8.0"
postgres = "0.11.6"
rand = "0.3.14"
router = "0.1.1"
urlencoded = "0.3.0"
